templates/observabilitysec_template.yaml
---
# Source: observabilitysec/templates/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: obsec-challenge
---
# Source: observabilitysec/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observabilitysec-service
  namespace: obsec-challenge
spec:
  type: NodePort
  selector:
    app: observabilitysec
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30007
---
# Source: observabilitysec/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: observabilitysec
  name: observabilitysec
  namespace: obsec-challenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: observabilitysec
  template:
    metadata:
      labels:
        app: observabilitysec
    spec:
      containers:
      - image: jdvalencia422/observabilitysec:latest
        name: observabilitysec
---
# Source: observabilitysec/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observabilitysec-ingress
  namespace: obsec-challenge
  labels:
    app: observabilitysec
spec:
  rules:
  - host: observabilitysec.info
    http:
      paths:
      - pathType: Prefix
        path: "/challenge"
        backend:
          service:
            name: observabilitysec-service
            port:
              number: 8080
